--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -2,15 +2,17 @@
   font-family: sudden;
   src: url(../../assets/font/SuddenDesires.ttf) format("truetype");
 }
+
 .wrapper{
    margin-left: auto;
    margin-right: auto;
    width:80%;
-   border:1px solid black;
+   border:1px solid rgb(4, 2, 121);
    border-radius:6px;
    padding:10px;
    font-family:'sudden', 'arial';
    color:white;
+   
 }
 label{
     color:white;
@@ -18,16 +20,18 @@ label{
 .center{
     margin-left: auto;
     margin-right: auto;
-    width:50%;
-    
+    width:50%;   
+}
+.center button{
+  padding: 20px 25px;
+  border-radius: 40px;
 }
 
 .btn{
-    color: #0099CC;
+    color: purple;
     background: white;
     border: 2px solid rgb(160, 160, 160);
     border-radius: 6px;
-    color: #0099CC;
     padding: 16px 32px;
     text-align: center;
     display: inline-block;
@@ -41,8 +45,9 @@ label{
     text-transform: uppercase;
 }
 .btn:hover{
-    border-color:#0099CC;
-    background-color: #008CBA;
+    border-color:purple;
+    /*background-color: #008CBA;*/
+    background-color: purple;
     color: white;
 }
 
@@ -52,7 +57,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    border: 2px solid  black;
+    border: 2px solid  rgb(4, 10, 100);
     width:500px;
   }
    
@@ -69,7 +74,7 @@ ul {
     background-color:white;
     text-align:center;
     text-decoration: none;
-    color:  #008CBA;
+    color:  #0099CC;
     display: block;
     width: 100%;
     -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
@@ -82,7 +87,8 @@ ul {
   li:hover {
     font-size: 30px;
     color:white;
-    background-color: #008CBA;
+    /*background-color: #008CBA;*/
+    background-color: rgb(0, 199, 206);
   }
   #newgame, #load, #replay, #pvp, #pvia{
     margin-bottom:10px;
@@ -91,7 +97,7 @@ ul {
   }
   .labtn{
       background-color:white;
-      color:#008CBA;
+      color:purple;
       border:2px solid rgb(160, 160, 160);
       border-radius:6px;
       padding: 10px;
@@ -108,13 +114,46 @@ ul {
       margin-right:5%;
       width:20%;
       margin-left:5%;
+      border-radius: 30px;
   }
+
+  .labtn1{
+    background-color:white;
+    color:purple;
+    border:2px solid rgb(160, 160, 160);
+    border-radius:6px;
+    padding: 10px;
+    text-align: center;
+    /*display: inline-block;*/
+    font-size: 15px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: uppercase;
+    float:left;
+    margin-right:5%;
+    width:20%;
+    margin-left:5%;
+    border-radius: 50px;
+
+}
     
   .labtn:hover{
     border-color: #0099CC;
     color:white;
-    background-color:#008CBA;
+    /*background-color:#008CBA;*/
+    background-color: purple;
   }
+
+  .labtn1:hover{
+    border-color: #0099CC;
+    color:white;
+    /*background-color:#008CBA;*/
+    background-color: rgb(0, 199, 206);
+  }
+
   .nom{
     width:16%;
     margin:0 auto;
@@ -130,6 +169,10 @@ ul {
   li, button{
     font-family:'sudden';
   }
+
+  /*li, button:hover{
+    background-color: purple;
+  }*/
   .choixTypeJeu{
     height:42px;
   }
@@ -141,4 +184,46 @@ ul {
     width:49%;
     margin:auto;
     margin-bottom:5px;
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
   }
+
+
+  .nameGame{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  .nameJ1{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  .nameJ2{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }
+
+  /*.nameLoadedGame{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%;
+  }*/
+
+  .levelIA{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%; 
+  }
+
+  .nameBoard{
+    color: #020495;
+    font-weight: bold;
+    font-size: 120%; 
+  }
+
+  
