--- a/diaballik-frontend/src/app/board-component/board-component.component.css
+++ b/diaballik-frontend/src/app/board-component/board-component.component.css
@@ -2,7 +2,7 @@
     font-family: sudden;
     src: url(../../assets/font/SuddenDesires.ttf) format("truetype");
   }
-div {
+/*div {
     --size-cell: 100px;
     --border-cell: 5px;
 }
@@ -62,4 +62,97 @@ p, h2{
     font-family:'sudden', 'arial';
     color:white;
     
+}*/
+
+div {
+    --size-cell: 100px;
+    --border-cell: 5px;
+}
+.board {
+   box-sizing: border-box;
+   border: var(--border-cell) solid;
+   background-color: rgba(255, 255, 255, 0.658);
+   /*background-color: #885200;*/
+   width: var(--size-cell);
+   height: var(--size-cell);
+   float: left;
+   padding: 0;
+   margin: 0;
+}
+.grey {
+    background-color: grey !important;
+}
+.aclass {
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.circle{
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    border: 3px solid black;
+    position:relative;
+    top:2%;
+    left:2%;
+}
+.hasBall{
+    position: relative;
+    top:22%;
+    margin-left: auto;
+    margin-right:auto;
+    width:50%;
+    height:50%;
+    border: 3px solid black;
+    background-color:white;
+    border-radius: 50%;
+}
+.left{
+    width:700px;
+    float: left;
+}
+
+.left p{
+    color: #c01053;
+    font-size: 400%;
+}
+.right{
+    float:right;
+    margin-right:auto;
+    margin-left:auto;
+    width:40%;
+    margin-top:270px;
+}
+
+.right p{
+    color: #020495;
+    /*font-weight: bold;*/
+    font-size: 120%;
+}
+
+
+p, h2{
+    font-family:'sudden', 'arial';
+    color:white;
+    
+}
+
+button{
+    background-color: rgb(141, 0, 54);
+    font-weight: bold;
+    font-size: 25px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    color: white;
+}
+
+button:hover{
+    background-color: rgb(182, 7, 144);
+}
+
+h2{
+    color: purple;
+    font-weight: bold;
+    font-size: 200%;
 }
