--- a/diaballik-frontend/src/app/menu/menu.component.css
+++ b/diaballik-frontend/src/app/menu/menu.component.css
@@ -2,7 +2,7 @@
   font-family: sudden;
   src: url(../../assets/font/SuddenDesires.ttf) format("truetype");
 }
-.wrapper{
+/*.wrapper{
    margin-left: auto;
    margin-right: auto;
    width:80%;
@@ -34,7 +34,7 @@ label{
     font-size: 18px;
     margin: 8px 2px;
     -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+   /* transition-duration: 0.4s;
     cursor: pointer;
     text-decoration: none;
     margin-left:25%;
@@ -97,10 +97,10 @@ ul {
       padding: 10px;
       text-align: center;
       /*display: inline-block;*/
-      font-size: 15px;
+     /* font-size: 15px;
       margin: 4px 2px;
       -webkit-transition-duration: 0.4s; /* Safari */
-      transition-duration: 0.4s;
+      /*transition-duration: 0.4s;
       cursor: pointer;
       text-decoration: none;
       text-transform: uppercase;
@@ -141,4 +141,221 @@ ul {
     width:49%;
     margin:auto;
     margin-bottom:5px;
-  }
+  }*/
+
+  .wrapper{
+    margin-left: auto;
+    margin-right: auto;
+    width:80%;
+    border:1px solid rgb(4, 2, 121);
+    border-radius:6px;
+    padding:10px;
+    font-family:'sudden', 'arial';
+    color:white;
+    
+ }
+ label{
+     color:white;
+ }
+ .center{
+     margin-left: auto;
+     margin-right: auto;
+     width:50%;   
+ }
+ .center button{
+   padding: 20px 25px;
+   border-radius: 40px;
+ }
+ 
+ .btn{
+     color: purple;
+     background: white;
+     border: 2px solid rgb(160, 160, 160);
+     border-radius: 6px;
+     padding: 16px 32px;
+     text-align: center;
+     display: inline-block;
+     font-size: 18px;
+     margin: 8px 2px;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     cursor: pointer;
+     text-decoration: none;
+     margin-left:25%;
+     text-transform: uppercase;
+ }
+ .btn:hover{
+     border-color:purple;
+     /*background-color: #008CBA;*/
+     background-color: purple;
+     color: white;
+ }
+ 
+ 
+ 
+ ul {
+     list-style-type: none;
+     margin: 0;
+     padding: 0;
+     border: 2px solid  rgb(4, 10, 100);
+     width:500px;
+   }
+    
+   li {
+     font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+     border-bottom: 2px solid  #008CBA;
+   }
+    
+   li:last-child {
+     border: none;
+   }
+    
+   li {
+     background-color:white;
+     text-align:center;
+     text-decoration: none;
+     color:  #0099CC;
+     display: block;
+     width: 100%;
+     -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
+     -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
+     -o-transition: font-size 0.3s ease, background-color 0.3s ease;
+     -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
+     transition: font-size 0.3s ease, background-color 0.3s ease;
+   }
+    
+   li:hover {
+     font-size: 30px;
+     color:white;
+     /*background-color: #008CBA;*/
+     background-color: rgb(0, 199, 206);
+   }
+   #newgame, #load, #replay, #pvp, #pvia{
+     margin-bottom:10px;
+     margin-top:10px;
+     display:none;
+   }
+   .labtn{
+       background-color:white;
+       color:purple;
+       border:2px solid rgb(160, 160, 160);
+       border-radius:6px;
+       padding: 10px;
+       text-align: center;
+       /*display: inline-block;*/
+       font-size: 15px;
+       margin: 4px 2px;
+       -webkit-transition-duration: 0.4s; /* Safari */
+       transition-duration: 0.4s;
+       cursor: pointer;
+       text-decoration: none;
+       text-transform: uppercase;
+       float:left;
+       margin-right:5%;
+       width:20%;
+       margin-left:5%;
+       border-radius: 30px;
+   }
+ 
+   .labtn1{
+     background-color:white;
+     color:purple;
+     border:2px solid rgb(160, 160, 160);
+     border-radius:6px;
+     padding: 10px;
+     text-align: center;
+     /*display: inline-block;*/
+     font-size: 15px;
+     margin: 4px 2px;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     cursor: pointer;
+     text-decoration: none;
+     text-transform: uppercase;
+     float:left;
+     margin-right:5%;
+     width:20%;
+     margin-left:5%;
+     border-radius: 50px;
+ 
+ }
+     
+   .labtn:hover{
+     border-color: #0099CC;
+     color:white;
+     /*background-color:#008CBA;*/
+     background-color: purple;
+   }
+ 
+   .labtn1:hover{
+     border-color: #0099CC;
+     color:white;
+     /*background-color:#008CBA;*/
+     background-color: rgb(0, 199, 206);
+   }
+ 
+   .nom{
+     width:16%;
+     margin:0 auto;
+   }
+   .choixia{
+     width: 64%;
+     margin-left: 23%;
+   }
+   .choixplateau{
+     width:40%;
+     margin-left:28%;
+   }
+   li, button{
+     font-family:'sudden';
+   }
+ 
+   /*li, button:hover{
+     background-color: purple;
+   }*/
+   .choixTypeJeu{
+     height:42px;
+   }
+   .listenom{
+     width:49%;
+     margin:auto;
+   }
+   .labellist{
+     width:49%;
+     margin:auto;
+     margin-bottom:5px;
+     color: #020495;
+     font-weight: bold;
+     font-size: 120%;
+   }
+ 
+ 
+   .nameGame{
+     color: #020495;
+     font-weight: bold;
+     font-size: 120%;
+   }
+ 
+   .nameJ1{
+     color: #020495;
+     font-weight: bold;
+     font-size: 120%;
+   }
+ 
+   .nameJ2{
+     color: #020495;
+     font-weight: bold;
+     font-size: 120%;
+   }
+ 
+   .levelIA{
+     color: #020495;
+     font-weight: bold;
+     font-size: 120%; 
+   }
+ 
+   .nameBoard{
+     color: #020495;
+     font-weight: bold;
+     font-size: 120%; 
+   }
